--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,10 @@ header h1 {
 .shout span {
   color: #aaaaaa;
 }
+
+#input {
+  width: 90%;
+  min-height: 80px;
+  margin: auto;
+  padding: 0;
+}
